# CallCommander

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  build_win32.bat  callcommander-screener.ism  callcommander.ism  callcommander.pro  callcommander.spec.in  configure.ac  configure.in  get_distro.sh  make_bundle.sh.in  make_slack.in  rc.mcidmd.in  rc.mld.in  rc.mlmld.in  slack-desc.in  slack_doinst.sh
asterisk/: Makefile.am  callcommander.conf-sample  extensions.conf-sample  features.conf-sample  manager.conf-sample  pbx_callcommander.c  sip.conf-sample  zapata.conf-sample
docs/: ASTERISK.txt  Makefile.am  callcommander.1  mcidmd.8  ml.1  ml.conf.5  mld.8  mld.conf.5  mskimmer.1  virtual_protocol.odt  win32-license.rtf
docs/tables/: Makefile.am  actions_format.txt  cid_filters.txt  cid_maps.txt  cid_sources.txt  city_names.txt  connections.txt  details_format.txt  directory.txt  show_slots.txt  shows.txt  user_perms.txt  users.txt  version.txt  virtual_systems.txt  winners.txt  wireless_names.txt
helpers/: Makefile.am  cwrap.cpp  cwrap.h
icons/: CallCommander.icns  Makefile.am  callcommander-16x16.xpm  callcommander-22x22.xpm  callcommander-32x32.xpm  callcommander-48x48.xpm  callcommander.rc  checkmark.xpm  client.xpm  client_segment.xpm  ex.xpm  logic.xpm  monitor.xpm  recorder.xpm
libp/: Makefile.am  askbox.cpp  askbox.h  askdata.cpp  askdata.h  asterisk_driver.cpp  asterisk_driver.h  bus_driver.cpp  bus_driver.h  call_meta_data.cpp  call_meta_data.h  calleriddetail.cpp  calleriddetail.h  calleridtrap.cpp  calleridtrap.h  change_password.cpp  change_password.h  client_data.cpp  client_data.h  cmdswitch.cpp  cmdswitch.h  conn_view_item.cpp  conn_view_item.h  connection_data.cpp  connection_data.h  console_data.cpp  console_data.h  dbdialog.cpp  dbdialog.h  edit_connection.cpp  edit_connection.h  edit_connection_data.cpp  edit_connection_data.h  edit_ttysettings.cpp  edit_ttysettings.h  edit_winner.cpp  edit_winner.h  escapestring.cpp  escapestring.h  html_gpl2_win32.cpp  (+95 more)
mcallman/: CallManager-Info.plist.in  Makefile.am  add_action.cpp  add_action.h  add_report.cpp  add_report.h  area_code_report.cpp  detail_listview.cpp  detail_listview.h  edit_action.cpp  edit_action.h  edit_report.cpp  edit_report.h  filter_dialog.cpp  filter_dialog.h  globals.h  list_actions.cpp  list_actions.h  list_details.cpp  list_details.h  list_reports.cpp  list_reports.h  list_winners.cpp  list_winners.h  mcallman.cpp  mcallman.h  mcallman.pro  peg_counter.cpp  peg_counter.h  print_report.cpp  print_report.h  select_operation.cpp  select_operation.h  show_detail.cpp  show_detail.h  standard_age_report.cpp  winner_listview.cpp  winner_listview.h  winner_listviewitem.cpp  winner_listviewitem.h
mcidmd/: Makefile.am  award_data.cpp  award_data.h  cid_monitor.cpp  cid_monitor.h  mcidmd.cpp  mcidmd.h  process_id.cpp
mcs/: Makefile.am  globals.h  mskimmer.cpp  mskimmer.h  mskimmer_widget.cpp  mskimmer_widget.h
mdbadmin/: CallAdministrator-Info.plist.in  Makefile.am  add_callerid_source.cpp  add_callerid_source.h  add_directory.cpp  add_directory.h  add_map_line.cpp  add_map_line.h  add_show.cpp  add_show.h  add_system.cpp  add_system.h  add_user.cpp  add_user.h  createdb.cpp  createdb.h  edit_callerid_source.cpp  edit_callerid_source.h  edit_directory.cpp  edit_directory.h  edit_filter.cpp  edit_filter.h  edit_map.cpp  edit_map.h  edit_module.cpp  edit_module.h  edit_show.cpp  edit_show.h  edit_show_slot.cpp  edit_show_slot.h  edit_system.cpp  edit_system.h  edit_user.cpp  edit_user.h  globals.h  list_callerid_sources.cpp  list_callerid_sources.h  list_directory.cpp  list_directory.h  list_modules.cpp  (+23 more)
ml/: CallScreener-Info.plist.in  Makefile.am  callcomment.cpp  callcomment.h  callers.cpp  callers.h  callinfo.cpp  callinfo.h  change_nickname.cpp  change_nickname.h  client_listview.cpp  client_listview.h  client_listviewitem.cpp  client_listviewitem.h  comment.cpp  comment.h  config.cpp  defaults.h  drawcaps.cpp  globals.h  keybox.cpp  keybox.h  line_button.cpp  line_button.h  line_warning.cpp  line_warning.h  list_clients.cpp  list_clients.h  message.cpp  message.h  mithlond.cpp  mithlond.h  ml.pro  msg_textedit.cpp  msg_textedit.h  redial_dialog.cpp  redial_dialog.h  sendmsg_textedit.cpp  sendmsg_textedit.h
mld/: Makefile.am  globals.h  mld.cpp  mld.h  mld_connection.cpp  mld_connection.h  mld_socket.cpp  mld_socket.h  mld_system.cpp  mld_system.h
mlhpi/: Makefile.am  mlhpi.pro  mlhpiinformation.cpp  mlhpiinformation.h  mlhpiplaystream.cpp  mlhpiplaystream.h  mlhpirecordstream.cpp  mlhpirecordstream.h  mlhpisoundcard.cpp  mlhpisoundcard.h  mlwavedata.cpp  mlwavedata.h  mlwavefile.cpp  mlwavefile.h
mlm/: Makefile-example  Makefile.am  mlm.h  mlm_airtools.c  mlm_cunctator.c  mlm_dump_calls.c  mlm_remora.c  mlm_test.c  mlm_udpdelay.c
mlmh/: Makefile.am  globals.h  mlm_functions.cpp  mlmh.cpp  mlmh.h  vguest.cpp  vguest.h
mlmld/: Makefile.am  mlmld.cpp  mlmld.h
samples/: Makefile.am  chat.conf  default.conf  dks-screen.conf  encode_call  four_banks.conf  gallagher-host.conf  jpa-host.conf  jpa-screener.conf  medved.conf  ml-sample.ini  ml.ini  mld-sample.ini  mld.conf  mld.ini  mlm_airtools.conf  mlm_cunctator.conf  mlm_remora.conf  mlm_udpdelay.conf  null.conf  ra-auxprod.conf  ra.conf  segments.conf  small_clock.conf  srn_clock.conf  swcons.conf  ts612.conf
scripts/: Makefile.am  twinkle.cfg.in  twinkle.sys  twinkle_answer.sh  twinkle_call.sh  twinkle_hybrid.sh.in
xdg/: Makefile.am  callcommander-callcommander.directory  callcommander-callcommander.menu  callcommander-mcallman.desktop  callcommander-mdbadmin.desktop  callcommander-ml.desktop  callcommander-mskimmer.desktop
